@@ -29,6 +29,7 @@ import java.util.Map;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.apache.hadoop.conf.Configuration;
+import org.apache.hadoop.fs.FileSystem;
 import org.apache.hadoop.fs.Path;
 import org.apache.hadoop.mapred.Counters;
 import org.apache.hadoop.mapred.JobClient;
@@ -79,6 +80,11 @@ public class MapReduceLauncher extends Launcher{
     private boolean aggregateWarning = false;
     private Map<FileSpec, Exception> failureMap;
 
+    public static final String SUCCEEDED_FILE_NAME = "_SUCCESS";
+    
+    public static final String SUCCESSFUL_JOB_OUTPUT_DIR_MARKER =
+        "mapreduce.fileoutputcommitter.marksuccessfuljobs";
+    
     /**
      * Get the exception that caused a failure on the backend for a
      * store location (if any).
@@ -309,6 +315,9 @@ public class MapReduceLauncher extends Launcher{
                     }
                     if (!st.isTmpStore()) {
                         succeededStores.add(st);
+                        // create an "_SUCCESS" file in output location if 
+                        // output location is a filesystem dir
+                        createSuccessFile(job, st);
                         finalStores++;
                         if (st.isMultiStore()) {
                             String counterName = PigStatsUtil.getMultiStoreCounterName(st);
@@ -509,6 +518,24 @@ public class MapReduceLauncher extends Launcher{
         PigOutputCommitter.storeCleanup(st, updatedJc.getConfiguration());
     }
 
+    private boolean shouldMarkOutputDir(Job job) {
+        return job.getJobConf().getBoolean(SUCCESSFUL_JOB_OUTPUT_DIR_MARKER, 
+                               false);
+    }
+    
+    private void createSuccessFile(Job job, POStore store) throws IOException {
+        if(shouldMarkOutputDir(job)) {
+            FileSystem fs = FileSystem.get(job.getJobConf());
+            Path outputPath = new Path(store.getSFile().getFileName());
+            if(fs.exists(outputPath)){
+                // create a file in the folder to mark it
+                Path filePath = new Path(outputPath, SUCCEEDED_FILE_NAME);
+                if(!fs.exists(filePath)) {
+                    fs.create(filePath).close();
+                }
+            }    
+        } 
+    }
     
     /**
      * An exception handler class to handle exceptions thrown by the job controller thread
